# vision-inference-pipeline

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
configs/: effnet_and_yolo_models.yaml  yolo_models.yaml
data/weights/: .gitignore
deploy/: deploy.sh  dev.sh
src/: logger.py  run_service.py
src/schema/: schema.py
src/service/: config.py  health.py  service.py  tools.py  utils.py
src/service/constants/: image_constants.py
src/service/models/: __init__.py  base.py
src/service/models/classification_models/: efficientnet.py  yolo.py
src/service/models/detection_models/: yolo.py
src/service/pipelines/: __init__.py  base.py  multi_model.py  single_model.py
src/service/prediction_strategies/: __init__.py  base.py  rotation_prediction.py
src/service/processing/: __init__.py  base.py  postprocess.py  preprocess.py  utils.py
src/settings/: base.py  models.py  pipelines.py  prediction_strategies.py  processing.py  settings.py
